# ngs_pipeline

./: README.md  pyproject.toml
.github/workflows/: python-testing.yaml
ngs_pipeline/: pipeline_description.json  run.py
