[tool.poetry]
name = "ngs_pipeline"
version = "0.1.0"
description = "dummy"
readme = "README.md"
license = "MIT"
authors = [
    "Dhananjhay <dhananjhay03@gmail.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
snakemake = [
    { version=">=7.20,<8", python = "<3.11" },
    { version=">=8.1.2", python = ">=3.11" },
]
snakebids = ">=0.14.0"
pulp = { version="<2.8.0", python = "<3.11" }
pandas = [
    { version = "<=2.0.3", python = "<3.9" },
    { version = ">=2.1.1", python = ">=3.12" },
]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-console-scripts = "^1.2.1"
pytest = "^6.2.5"
black = "^24.0.0"
pylint = "^2.11.1"
isort = "^5.10.1"
poethepoet = "^0.10.0"
snakefmt = "^0.10.0"
pygraphviz = "1.7"
Jinja2 = "^3.0.3"

[tool.poetry.scripts]
ngs_pipeline = "ngs_pipeline.run:app.run"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
