[tool.poetry]
name = "ngs_pipeline"
version = "0.1.0"
description = "dummy"
readme = "README.md"
license = "MIT"
authors = [
    "Dhananjhay <dhananjhay03@gmail.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
snakemake = ">=8.1.2"
snakebids = ">=0.14.0"
pandas = [{ version = ">=2.1.1", python = ">=3.12" }]

[tool.poetry.dev-dependencies]
black = "^24.0.0"
isort = "^5.10.1"
poethepoet = "^0.10.0"
snakefmt = "^0.10.0"

[tool.poetry.scripts]
ngs_pipeline = "ngs_pipeline.run:app.run"

[tool.poe.tasks]
quality_check = { shell = "isort ngs_pipeline/*.py && black ngs_pipeline --check && snakefmt ngs_pipeline --check" }
quality_fix = { shell = "isort ngs_pipeline/*.py && black ngs_pipeline  && snakefmt ngs_pipeline" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
